Fix T84867: Transform node does not rotate/scale instances

The manipulation of rot/scale was simply not implemented.